# CCompiler

./: CMakeLists.txt  Makefile  README.md
docs/: grammar.txt
examples/: minic.h  sorting_algorithms.c
include/code_generator/: code_generator.h  code_generator_helpers.h
include/intermediate_code/: intermediate_code.h  intermediate_code_factory.h  intermediate_code_helpers.h
include/lexical_analyzer/: lexical_analyzer.h  state_machine.h
include/semantic_analyzer/: semantic_analyzer.h
include/symbol_table/: symbol_table.h
include/syntax_analyzer/: syntax_analyzer.h  syntax_analyzer_helpers.h  syntax_analyzer_visitor.h
include/utils/: dynamic_array.h  file_buffer.h  hash.h  logger.h  string.h  string_buffer.h
src/: main.c
src/code_generator/: code_generator.c  code_generator_helpers.c  code_generator_template.s
src/intermediate_code/: intermediate_code.c  intermediate_code_factory.c  intermediate_code_helpers.c
src/intermediate_code/optimizations/: deduplication.c  liveness_check.c
src/lexical_analyzer/: lexical_analyzer.c  state_machine.c
src/semantic_analyzer/: semantic_analyzer.c
src/semantic_analyzer/validators/: scope.c  semantics.c  type.c
src/symbol_table/: symbol_table.c  symbol_table_factory.c  symbol_table_parse.c  symbol_table_search.c  symbol_table_syscalls.c  symbol_table_type.c
src/syntax_analyzer/: syntax_analyzer.c  syntax_analyzer_factory.c  syntax_analyzer_helpers.c  syntax_analyzer_visitor.c
src/syntax_analyzer/analyzers/: declaration_specifiers.c  enumerator.c  expression.c  function.c  statement.c  structure.c  variable.c
src/utils/: dynamic_array.c  file_buffer.c  hash.c  logger.c  string.c  string_buffer.c
tests/: performance_test.sh  testsuite.py
tests/assets/: file_interaction.txt
tests/performance/: bubble_sort.c  fibonacci.c  quick_sort.c
tests/system/: c-testsuite.test  file_interaction.c  recursion.c  search_algorithms.c  system_tests.test
tests/system/Advent Of Code 2025/: advent_of_code.test  day1.c  day2.c  day3.c  day4.c  day5.c
tests/unit/: 1_lexical_analyzer.test  2_syntax_analyzer.test  3_symbol_table.test  4_semantic_analyzer.test  5_intermediate_code.test
